--- a/Translations/German/text-hint-change.xml
+++ b/Translations/German/text-hint-change.xml
@@ -95,7 +95,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_23</zType>
-		<Translation>Eine militärische Einheit auf einer eingenommenen Stadtplatz zu platzieren makiert für jedes andere Reich das Gebiet als deines. Scheitert man einen eingenommenen Stadtplatz zu verteidigen kann es sein, dass Siedler deiner Rivalen es von dir nehmen.</Translation>
+		<Translation>Eine militärische Einheit auf einem eingenommenen Stadtplatz zu platzieren makiert für jedes andere Reich das Gebiet als deines. Scheitert man einen eingenommenen Stadtplatz zu verteidigen kann es sein, dass Siedler deiner Rivalen es von dir nehmen.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_24</zType>
